game over high to fast

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <label for="mediumSpeed" id="mediumSpeedLabel" class="speedBtn">Medium</label>
                         </span>
                         <span>
-                            <label for="highSpeed" id="highSpeedLabel" class="speedBtn">High</label>
+                            <label for="highSpeed" id="highSpeedLabel" class="speedBtn">Fast</label>
                         </span>
                     </div>
                 </div>
